Adjust margin to prevent wrapping in more cases.

--- a/app/assets/stylesheets/components/officialness/_fr_metadata_bar.scss
+++ b/app/assets/stylesheets/components/officialness/_fr_metadata_bar.scss
@@ -109,7 +109,7 @@
       float: left;
       font-size: modular-scale(-1);
       list-style-type: none;
-      margin-right: 15px;
+      margin-right: 10px;
     }
 
     h5 {
